--- a/open_lm/utils/verify_converted_llama.ipynb
+++ b/open_lm/utils/verify_converted_llama.ipynb
@@ -108,12 +108,12 @@
     "\n",
     "    for i in range(max_len):\n",
     "        with torch.no_grad():\n",
-    "            logits, _ = model(tokens)\n",
+    "            output = model(tokens)\n",
     "        if temperature > 0:\n",
-    "            probs = torch.softmax(logits[:, -1] / temperature, dim=-1)\n",
+    "            probs = torch.softmax(output.logits[:, -1] / temperature, dim=-1)\n",
     "            next_token = sample_top_p(probs, top_p)\n",
     "        else:\n",
-    "            next_token = torch.argmax(logits[:, -1], dim=-1, keepdim=True)\n",
+    "            next_token = torch.argmax(output.logits[:, -1], dim=-1, keepdim=True)\n",
     "        tokens = torch.cat([tokens, next_token], dim=-1)\n",
     "\n",
     "    generation = tokenizer.decode(tokens[0].cpu().numpy().tolist())\n",
